syntax = "proto3";

package pb;

service Say {
	rpc Ping(PingRequest) returns (PongResponse) {}
	rpc Hello(HelloRequest) returns (HelloResponse) {}
}

message PingRequest{}
message PongResponse{
	string service_name = 1;
	string environment = 2;
}

message HelloRequest {
	string name = 1;
}

message HelloResponse {
	string greeting = 2;
}